kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-uploader-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: secure-uploader
  template:
    metadata:
      labels:
        app: secure-uploader
    spec:
      containers:
      - name: web
        image: praveenmtsget/file-uploader-app:beta-1749559567
        ports:
        - containerPort: 80
        volumeMounts:
        - name: web-root
          mountPath: /usr/share/nginx/html

      volumes:
      - name: web-root
        emptyDir: {}
