kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-uploader-service
spec:
  selector:
    app: secure-uploader
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
